<resources>
    <string name="app_name">Grocery</string>
    <string name="action_settings">Settings</string>
    <string name="action_categories">Categories</string>
    <string name="action_completed">Completed Items</string>
    <string name="action_outstanding">Outstanding Items</string>

    <!-- Fragment Titles -->
    <string name="fragment_title_items">Items</string>
    <string name="fragment_title_completed">Completed Items</string>
    <string name="fragment_title_outstanding">Outstanding Items</string>
    <string name="fragment_title_edit">Edit Item</string>
    <string name="fragment_title_category">Edit Category</string>
    <string name="fragment_title_categories">Categories</string>

    <!-- Dialog Fragment -->
    <string name="dialog_fragment_cancel">Cancel</string>
    <string name="dialog_fragment_confirm">Confirm</string>

    <!-- Defaults -->
    <string name="item_name_default">Grocery Item</string>
    <string name="item_category_default">Category</string>
    <string name="item_view_default">Not Available</string>

    <!-- Layouts -->
    <string name="empty_list_default">Your shopping list is empty</string>

    <!-- Menus -->
    <string name="menu_action_save_default">Save</string>
    <string name="menu_action_check_default">Check</string>
    <string name="menu_action_reset_default">Reset</string>

    <!-- Spinners -->
    <string name="spinner_category_default">Choose Category</string>

    <!-- Snackbar -->
    <string name="snackbar_chooseCat_default">Create some categories</string>
    <string name="snackbar_chooseCatAdd_default">Create</string>

    <!-- Form Validation -->
    <string name="form_category_name">Category name required</string>
    <string name="form_item_name">Item name required</string>

    <!-- Labels -->
    <string name="edit_name_label">Edit Item Name</string>
    <string name="edit_catName_label">Edit Category Name</string>
    <string name="edit_quantity_label">Item Quantity</string>
    <string name="edit_categories_label">Item Category</string>
    <string name="edit_tags_label">Item Tags - Press enter to add tag</string>
    <string name="edit_addCat_label">Add Category</string>

    <string name="view_tags_label">Item Tags</string>

    <!-- Tags -->
    <string name="field_name_item">Item Name</string>
    <string name="field_name_quantity">Item Quantity</string>
    <string name="field_name_category">Item Category</string>
    <string name="field_name_categoryName">Category Name</string>
</resources>
