<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_fragment_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_fragment_margin"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/edit_name_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:textSize="@dimen/item_font_size"
            android:text="@string/item_view_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/edit_quantity_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:textSize="@dimen/item_font_size"
            android:text="@string/item_view_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/edit_categories_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_view_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:textSize="@dimen/item_font_size"
            android:text="@string/item_view_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/view_tags_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <GridLayout
            android:id="@+id/item_view_tags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_tagsMarginTop"
            android:columnCount="3"/>

    </LinearLayout>

</LinearLayout>