<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_fragment_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_fragment_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/edit_name_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/item_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/edit_quantity_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/item_edit_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_nameMarginBottom"
            android:text="@string/edit_categories_label"
            android:textSize="@dimen/item_font_size"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/item_edit_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

    </LinearLayout>

</LinearLayout>