<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/item_padding"
    android:paddingLeft="@dimen/item_padding"
    android:layout_marginBottom="@dimen/item_marginBottom"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/groceryItemCheckbox"
            android:layout_width="@dimen/item_checkboxSize"
            android:layout_height="@dimen/item_checkboxSize"
            android:background="@drawable/checkbox_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_done"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/groceryItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_nameMarginTop"
            android:layout_marginLeft="@dimen/item_nameMarginLeft"
            android:layout_marginBottom="@dimen/item_nameMarginBottom"
            android:text="@string/item_name_default"
            android:textSize="@dimen/item_font_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/groceryItemTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_tagMarginTop"
            android:layout_marginLeft="@dimen/item_nameMarginLeft"
            android:layout_marginBottom="@dimen/item_nameMarginBottom"
            android:visibility="gone"
            android:background="@drawable/ic_label"/>

    </GridLayout>

    <TextView
        android:id="@+id/groceryItemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_offsetMargin"
        android:layout_gravity="right"
        android:paddingTop="@dimen/item_categoryPadding"
        android:paddingBottom="@dimen/item_categoryPadding"
        android:paddingLeft="@dimen/item_categoryPaddingWidth"
        android:paddingRight="@dimen/item_categoryPaddingWidth"
        android:text="@string/item_category_default"
        android:textSize="@dimen/item_font_catSize"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        android:tag="@string/field_name_categoryName"
        android:background="@drawable/category_label"/>

</LinearLayout>